--- a/last homework in html/index.html
+++ b/last homework in html/index.html
@@ -34,5 +34,20 @@
         >Get a quote</a
       >
     </header>
+    <div class="first">
+      <h1>Your Lightning Fast Delivery Partner</h1>
+      <p>
+        Facere distinctio molestiae nisi fugit tenetur repellat non praesentium
+        nesciunt optio quis sit odio nemo quisquam. eius quos reiciendis eum vel
+        eum voluptatem eum maiores eaque id optio ullam occaecati odio est
+        possimus vel reprehenderit
+      </p>
+      <div class="forma">
+        <form action="#">
+          <input type="text" placeholder="ZIP code or City" />
+          <button type="button">Search</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
